--- a/src/components/EditContainer/EditContainer.scss
+++ b/src/components/EditContainer/EditContainer.scss
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100vh;
   background: url(../../background.png) center center content-box;
+  background-color: #1d1b1f;
   position: relative;
   overflow: scroll;
 
@@ -16,7 +17,6 @@
     align-items: center;
   }
   .editor {
-    background-color: #fff;
     position: relative;
     height: 100%;
     width: 100%;
